k8s/http-echo-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: http-echo-service
  namespace: http-echo
spec:
  type: ClusterIP
  selector:
    app: http-echo
  ports:
    - port: 9080
      targetPort: 5678  # The internal port where the container listens
---
apiVersion: apps/v1 # TEST
kind: Deployment
metadata:
  name: http-echo-deployment
  namespace: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:latest
        args: 
          - "-text=Hello, World!"  # The text that will be echoed
        ports:
        - containerPort: 5678
