k8s/http-echo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo-ingress
  namespace: http-echo
spec:
  ingressClassName: nginx
  rules:
  - host: http-echo.platformtrack.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-echo-service 
            port: 
              number: 5678
