k8s/wordpress-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
spec:
  ingressClassName: nginx
  rules:
  - host: platformtrack.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service 
            port: 
              number: 8080
